--- a/mvc-music-store/Views/Albums/Index.cshtml
+++ b/mvc-music-store/Views/Albums/Index.cshtml
@@ -10,7 +10,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table table-striped table-hover">
+<table class="table table-striped table-hover sortable">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Artist.Name)
