Updated Store View, added Order View, added checkout

--- a/mvc-music-store/Views/Home/Store.cshtml
+++ b/mvc-music-store/Views/Home/Store.cshtml
@@ -2,4 +2,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Welcome to our Music Store</h1>
+<h1>MVC Music Store</h1>
+
+<p>Welcome to our Music Store. Tell us what kind of music you like!</p>
